@@ -1,0 +1,7 @@
+set error non-classified off
+set error unknown_code off
+set error memory off
+set error stack off
+run
+state
+quit
